# dragster

./: .gitignore  CMakeLists.txt  README.md  com.github.hellokartikey.Dragster.yml  io.github.hellokartikey.Dragster.yml
.cache/clangd/index/: backend.cc.62E8796F21D361A0.idx  backend.h.7A6552164B32572B.idx  main.cc.51E1FD4724A5E974.idx  mime.cc.DF8DDD36035D7CED.idx  mime.h.0657884F41B000BA.idx
cmake/: FetchFmt.cmake
src/: CMakeLists.txt  backend.cc  backend.h  main.cc  mime.cc  mime.h  resources.qrc
src/contents/ui/: DragElement.qml  Dragster.qml  main.qml
